Fix jumping scrollbar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,7 @@
 
 html {
   font-size: 62.5%;
+  overflow-y: scroll;
 }
 
 body {
